# gugaURA

./: .gitignore  Cargo.toml  README.md  RELEASE_v2.0.6.md
cellar/: Cargo.toml
cellar/src/: lib.rs
cellar/src/core/: error.rs
cellar/src/windows/: ffi.rs  hook.rs  interceptor.rs  log_impl.rs  main.rs  mod.rs
guga_ura/: Cargo.toml  build.rs
guga_ura/src/: lib.rs  trace.rs
guga_ura/src/core/: config.rs  debug.rs  http.rs  interceptor.rs  mod.rs  watcher.rs
guga_ura/src/il2cpp/: fps_hook.rs  http_hook.rs  mod.rs  symbols.rs  symbols_impl.rs  types.rs
guga_ura/src/proxy/: cri_mana_vpx.rs  exports.def  mod.rs  unityplayer.rs
guga_ura_config/: Cargo.toml  build.rs
guga_ura_config/src/: app.rs  config.rs  detector.rs  embedded_dlls.rs  installer.rs  main.rs  receiver.rs  theme.rs
guga_ura_config_core/: Cargo.toml  build.rs
guga_ura_config_core/src/: config.rs  detector.rs  embedded_dlls.rs  installer.rs  lib.rs  receiver.rs  receiver_pipeline.rs  stallion_output.rs
guga_ura_config_tauri/: .gitignore  package.json  pnpm-lock.yaml
guga_ura_config_tauri/frontend/: index.html  package.json  tsconfig.json  vite.config.ts
guga_ura_config_tauri/frontend/src/: App.vue  main.ts
guga_ura_config_tauri/frontend/src/app/: AppShell.vue  app.css
guga_ura_config_tauri/frontend/src/app/components/: AppSidebar.vue  AppStatusBar.vue
guga_ura_config_tauri/frontend/src/app/config/: navigation.ts
guga_ura_config_tauri/frontend/src/app/providers/: AppProviders.vue
guga_ura_config_tauri/frontend/src/app/services/: tauri.ts
guga_ura_config_tauri/frontend/src/app/utils/: status.ts
guga_ura_config_tauri/frontend/src/components/: SectionCard.vue  StatusBadge.vue
guga_ura_config_tauri/frontend/src/components/display/: InfoCard.vue
guga_ura_config_tauri/frontend/src/components/feedback/: PageState.vue
guga_ura_config_tauri/frontend/src/components/layout/: FeaturePlaceholderPage.vue  PageHeader.vue
guga_ura_config_tauri/frontend/src/features/bootstrap/: types.ts
guga_ura_config_tauri/frontend/src/features/bootstrap/api/: bootstrapApi.ts
guga_ura_config_tauri/frontend/src/features/bootstrap/pages/: BootstrapPage.vue
guga_ura_config_tauri/frontend/src/features/console/pages/: ConsolePage.vue
guga_ura_config_tauri/frontend/src/features/deploy/: types.ts
guga_ura_config_tauri/frontend/src/features/deploy/pages/: DeployPage.vue
guga_ura_config_tauri/frontend/src/features/dll-injection/: types.ts
guga_ura_config_tauri/frontend/src/features/dll-injection/api/: dllInjectionApi.ts
guga_ura_config_tauri/frontend/src/features/dll-injection/pages/: DllInjectionPage.vue
guga_ura_config_tauri/frontend/src/features/forward-performance/pages/: ForwardPerformancePage.vue
guga_ura_config_tauri/frontend/src/features/game-settings/: types.ts
guga_ura_config_tauri/frontend/src/features/game-settings/api/: gameSettingsApi.ts
guga_ura_config_tauri/frontend/src/features/game-settings/pages/: GameSettingsPage.vue
guga_ura_config_tauri/frontend/src/features/overview/api/: overviewApi.ts
guga_ura_config_tauri/frontend/src/features/overview/pages/: OverviewPage.vue
guga_ura_config_tauri/frontend/src/features/receiver-config/: types.ts
guga_ura_config_tauri/frontend/src/features/receiver-config/api/: receiverConfigApi.ts
guga_ura_config_tauri/frontend/src/features/receiver-config/pages/: ReceiverConfigPage.vue
guga_ura_config_tauri/frontend/src/features/terminal/: types.ts
guga_ura_config_tauri/frontend/src/features/terminal/api/: terminalApi.ts
guga_ura_config_tauri/frontend/src/features/terminal/pages/: TerminalPage.vue
guga_ura_config_tauri/frontend/src/features/tool-settings/: types.ts
guga_ura_config_tauri/frontend/src/features/tool-settings/api/: toolSettingsApi.ts
guga_ura_config_tauri/frontend/src/features/tool-settings/pages/: ToolSettingsPage.vue
guga_ura_config_tauri/frontend/src/router/: index.ts
guga_ura_config_tauri/frontend/src/stores/: app.ts  bootstrap.ts  deploy.ts  dllInjection.ts  gameSettings.ts  overview.ts  receiver.ts  receiverConfig.ts  terminal.ts  toolSettings.ts
guga_ura_config_tauri/scripts/: clean-installer-artifacts.ps1  rename-installer.ps1
guga_ura_config_tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
guga_ura_config_tauri/src-tauri/capabilities/: default.json
guga_ura_config_tauri/src-tauri/src/: bootstrap.rs  commands.rs  main.rs  state.rs  tool_settings.rs
guga_ura_fans/: Cargo.toml
guga_ura_fans/src/: lib.rs
guga_ura_receiver/: Cargo.toml
guga_ura_receiver/src/: main.rs
scripts/: build-gugaura-installer.bat  start-guga-config-tauri.ps1
