[package]
name = "guga_ura"
version = "0.1.0"
edition = "2021"
description = "Uma Musume data capture tool for analysis"

[lib]
name = "UnityPlayer"
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
widestring = "1.1"
ureq = "2.10"
pelite = "0.10"
fnv = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
windebug_logger = "0.1"
minhook = "0.5"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.62.2"
features = [
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_Foundation",
]

[build-dependencies]
tauri-winres = "0.1"
