[package]
name = "guga_ura_config"
version = "1.1.0"
edition = "2021"
description = "GugaURA Configuration Tool"

[[bin]]
name = "GugaURA_Config"
path = "src/main.rs"

[features]
default = ["embed_dlls"]
embed_dlls = []

[dependencies]
eframe = "0.31"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
tiny_http = "0.12"
chrono = "0.4"
guga_ura_fans = { path = "../guga_ura_fans" }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
