[package]
name = "guga_ura_config_core"
version = "1.1.0"
edition = "2021"
description = "GugaURA Configuration Core"

[features]
default = ["embed_dlls"]
embed_dlls = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"
chrono = "0.4"
guga_ura_fans = { path = "../guga_ura_fans" }
ureq = "2.12"
url = "2.5"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
tempfile = "3.13"
