[package]
name = "guga_ura_fans"
version = "0.1.0"
edition = "2021"
description = "Shared fan extraction and daily aggregation for GugaURA receivers"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"

[dev-dependencies]
tempfile = "3.13"
