[package]
name = "guga_ura_receiver"
version = "0.1.0"
edition = "2021"
description = "Local HTTP receiver for Uma Musume msgpack payloads"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
log = "0.4"
env_logger = "0.11"
guga_ura_fans = { path = "../guga_ura_fans" }
guga_ura_config_core = { path = "../guga_ura_config_core" }
