[package]
name = "guga_ura_config_tauri"
version = "2.0.0"
edition = "2021"
description = "gugaURA Desktop Shell"

[build-dependencies]
winresource = "0.1"

[features]
default = ["embed_dlls"]
embed_dlls = ["guga_ura_config_core/embed_dlls"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
guga_ura_config_core = { path = "../../guga_ura_config_core", default-features = false }
rfd = "0.15"
